--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 @import url('https://fonts.googleapis.com/css?family=Didact+Gothic');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display');
 
 .Inconsolata{
   font-family: 'Inconsolata', monospace;
